# claude-personal-assistant

./: .gitignore  README.md  build.py  index.py  main.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py
backend/: .env.example  __init__.py  main.py  requirements.txt  server.py
backend/app/: __init__.py  config.py  conversation_store.py  file_context.py  llm.py  main.py  profile_store.py  schemas.py
frontend/: app.js  index.html  markdown.js  styles.css
